{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 40,
  "lineage": "1f52074e-a0b4-49ad-f2a7-7d9650a98d11",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377391361:loadbalancer/app/demo-ecs-load-balancer/b35e315a61cda6cf",
            "arn_suffix": "app/demo-ecs-load-balancer/b35e315a61cda6cf",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-ecs-load-balancer-586547042.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377391361:loadbalancer/app/demo-ecs-load-balancer/b35e315a61cda6cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-ecs-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-071326c853d8d97fb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-063a6d04f750e8847"
              },
              {
                "subnet_id": "subnet-06df5f05009485570"
              }
            ],
            "subnets": [
              "subnet-063a6d04f750e8847",
              "subnet-06df5f05009485570"
            ],
            "vpc_id": "vpc-08e7f2bfa19ea3f6d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.demo-vpc-security-group",
            "module.vpc.aws_subnet.demo-vpc-subnet1",
            "module.vpc.aws_subnet.demo-vpc-subnet2",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377391361:listener/app/demo-ecs-load-balancer/b35e315a61cda6cf/0c5d69424f33acec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377391361:targetgroup/demo-ecs-target-group/6d47da76547cf391",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377391361:listener/app/demo-ecs-load-balancer/b35e315a61cda6cf/0c5d69424f33acec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377391361:loadbalancer/app/demo-ecs-load-balancer/b35e315a61cda6cf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.ecs-load-balancer",
            "module.ecs.aws_alb_target_group.ecs-target_group",
            "module.vpc.aws_security_group.demo-vpc-security-group",
            "module.vpc.aws_subnet.demo-vpc-subnet1",
            "module.vpc.aws_subnet.demo-vpc-subnet2",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377391361:targetgroup/demo-ecs-target-group/6d47da76547cf391",
            "arn_suffix": "targetgroup/demo-ecs-target-group/6d47da76547cf391",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377391361:targetgroup/demo-ecs-target-group/6d47da76547cf391",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:891377391361:loadbalancer/app/demo-ecs-load-balancer/b35e315a61cda6cf"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "demo-ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08e7f2bfa19ea3f6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377391361:security-group/sg-0d990b8b6942d1c52",
            "description": "Allow access to RDS",
            "egress": [],
            "id": "sg-0d990b8b6942d1c52",
            "ingress": [],
            "name": "production-db-access-sg",
            "name_prefix": "",
            "owner_id": "891377391361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-db-access-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-db-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e7f2bfa19ea3f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377391361:security-group/sg-01533320086ee93be",
            "description": "production Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01533320086ee93be",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d990b8b6942d1c52"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "production-rds-sg",
            "name_prefix": "",
            "owner_id": "891377391361",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "production-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "production-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e7f2bfa19ea3f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.aws_security_group.db_access_sg",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-vpc-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377391361:internet-gateway/igw-018e2bd2aef52d2e8",
            "id": "igw-018e2bd2aef52d2e8",
            "owner_id": "891377391361",
            "tags": {
              "Name": "demo-vpc-internet-gateway"
            },
            "tags_all": {
              "Name": "demo-vpc-internet-gateway"
            },
            "vpc_id": "vpc-08e7f2bfa19ea3f6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "demo-vpc-network-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377391361:network-acl/acl-00bcac31f7ed7e5eb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00bcac31f7ed7e5eb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "891377391361",
            "subnet_ids": [
              "subnet-063a6d04f750e8847",
              "subnet-06df5f05009485570"
            ],
            "tags": {
              "Name": "demo-vpc-network-acl"
            },
            "tags_all": {
              "Name": "demo-vpc-network-acl"
            },
            "vpc_id": "vpc-08e7f2bfa19ea3f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.demo-vpc-subnet1",
            "module.vpc.aws_subnet.demo-vpc-subnet2",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-vpc-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377391361:route-table/rtb-0501b9407d65c2041",
            "id": "rtb-0501b9407d65c2041",
            "owner_id": "891377391361",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-018e2bd2aef52d2e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc-route-table"
            },
            "tags_all": {
              "Name": "demo-vpc-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e7f2bfa19ea3f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.demo-vpc-internet-gateway",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-vpc-route-table-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022b16e6e204150f4",
            "route_table_id": "rtb-0501b9407d65c2041",
            "subnet_id": "subnet-06df5f05009485570"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.demo-vpc-internet-gateway",
            "module.vpc.aws_route_table.demo-vpc-route-table",
            "module.vpc.aws_subnet.demo-vpc-subnet1",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-vpc-route-table-association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e0733fd3b0443b2",
            "route_table_id": "rtb-0501b9407d65c2041",
            "subnet_id": "subnet-063a6d04f750e8847"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.demo-vpc-internet-gateway",
            "module.vpc.aws_route_table.demo-vpc-route-table",
            "module.vpc.aws_subnet.demo-vpc-subnet2",
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-vpc-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377391361:security-group/sg-071326c853d8d97fb",
            "description": "Allow HTTP, HTTPS, and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071326c853d8d97fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-vpc-security-group",
            "name_prefix": "",
            "owner_id": "891377391361",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e7f2bfa19ea3f6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-vpc-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377391361:subnet/subnet-06df5f05009485570",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06df5f05009485570",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377391361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-subnet"
            },
            "tags_all": {
              "Name": "demo-vpc-subnet"
            },
            "vpc_id": "vpc-08e7f2bfa19ea3f6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-vpc-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377391361:subnet/subnet-063a6d04f750e8847",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063a6d04f750e8847",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377391361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-subnet"
            },
            "tags_all": {
              "Name": "demo-vpc-subnet"
            },
            "vpc_id": "vpc-08e7f2bfa19ea3f6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-vpc-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377391361:subnet/subnet-01ffc20e82f5f43ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ffc20e82f5f43ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377391361",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-vpc-subnet"
            },
            "tags_all": {
              "Name": "demo-vpc-subnet"
            },
            "vpc_id": "vpc-08e7f2bfa19ea3f6d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377391361:vpc/vpc-08e7f2bfa19ea3f6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09f5f2118a23042d0",
            "default_route_table_id": "rtb-0a86d96cba616e4f5",
            "default_security_group_id": "sg-0b21fb328b63ca044",
            "dhcp_options_id": "dopt-094a543d17d4d0e6c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e7f2bfa19ea3f6d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a86d96cba616e4f5",
            "owner_id": "891377391361",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}